fixed method updating coordinator members